--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
-    <div class="logo">app.creation</div>
-    <nav class="menu">
-      <a class="menu__item" href="">start</a>
-      <a class="menu__item" href="">service</a>
-      <a class="menu__item" href="">about</a>
-      <a class="menu__item" href="">blog</a>
-      <a class="menu__item" href="">contact us</a>
-    </nav>
-  </header>
-  <section class="main-section">
-    <main class="main-content">
-      <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
-      <p class="main-content__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
-      <button class="main-content__button">Schedule free consultation</button>
-    </main>
-    <div class="image-content">
-      <img class="image-content__image" src="" alt="">
+  <div class="wrapper">
+    <header class="header">
+      <div class="logo">app.creation</div>
+      <nav class="menu">
+        <a class="menu__item" href="">start</a>
+        <a class="menu__item" href="">service</a>
+        <a class="menu__item" href="">about</a>
+        <a class="menu__item" href="">blog</a>
+        <a class="menu__item" href="">contact us</a>
+      </nav>
+    </header>
+    <section class="main-section">
+      <main class="main-content">
+        <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+        <p class="main-content__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+        <button class="main-content__button">Schedule free consultation</button>
+      </main>
+      <div class="image-content">
+        <img class="image-content__image" src="" alt="">
+      </div>
     </div>
   </section>
 </body>
