--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <title>Структура сайта</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="font.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="logo">app.creation</div>
+      <div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
+      app.creation</div>
       <nav class="menu">
         <a class="menu__item" href="">start</a>
         <a class="menu__item" href="">service</a>
