--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Структура сайта</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="font.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +14,12 @@
       <div class="logo">
         <div class="logo__circle logo__circle_color_dark-blue"></div>
         <div class="logo__circle logo__circle_color_blue"></div>
-      app.creation</div>
+       <span class="logo__none">app.creation</span>
+     </div>
+     <input id="menu__toggle" type="checkbox" />
+        <label class="menu__button" for="menu__toggle">
+          <span></span>
+        </label>
       <nav class="menu">
         <a class="menu__item" href="">start</a>
         <a class="menu__item menu__item_active" href="">service</a>
@@ -25,7 +31,7 @@
     <section class="main">
       <h1 class="main__title">Building an App
         <span class="main__title_highlight"> Without Design Expertise?</span></h1>
-        <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+        <p class="main__subtitle">I help tech startups design better digital products without hiring a&nbsp;full-time designer</p>
         <a class="main__button" href="#">Schedule free consultation</a>
       </section>
     </div>
