--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
         <a class="main__button" href="#">Schedule free consultation</a>
       </section>
+      <div class="bottom">
+        <div class="bottom__circle bottom__circle_left"></div>
+        <div class="bottom__circle bottom__circle_center"></div>
+        <div class="bottom__circle bottom__circle_right"></div>
+      </div>
     </div>
   </body>
   </html>
